--- a/aacr2025.html
+++ b/aacr2025.html
@@ -4,8 +4,7 @@ i<!DOCTYPE html>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AACR 2025 Clinical Trial Results Dashboard</title>
-    <meta name="description" content="Interactive dashboard visualizing objective response rates from clinical trials reported at AACR 2025.
-    All data is the copyright of AACR , ©AACR & visualized here as a service to researchers. This is merely a visualization of the data, not an endorsement of any results or conclusions.">
+    <meta name="description" content="Interactive dashboard visualizing objective response rates from clinical trials reported at AACR 2025.">
     
     <!-- External libraries -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
@@ -305,7 +304,9 @@ i<!DOCTYPE html>
                 <p>This interactive dashboard visualizes objective response rates from clinical trials reported at AACR 2025, featuring real data extracted from 12 clinical trial abstracts including breakthrough studies like KEYNOTE-689 (pembrolizumab in head & neck cancer), KEYLYNK-007 (olaparib + pembrolizumab tumor-agnostic trial), Dostarlimab non-operative management (81% ORR), and Zoldonrasib (KRAS G12D inhibitor with 61% ORR). The dashboard allows filtering by cancer type, trial phase, and company, with interactive tooltips providing detailed trial information including sample sizes ranging from 12 to 714 patients and response rates from 27% to 85.7% across multiple cancer types.</p>
             </div>
             
-            <p class="note">Note: these results are extracted from congress literature with large language models. Please report any data quality issues to spiff007@gmail.com. Visualization inspired by <a href="https://aacr.convoke.bio/" target="_blank">aacr.convoke.bio</a> - thanks to Alex Telford for the inspiration!</p>
+            <p class="note">Note: these results are extracted from congress literature with large language models. Please report any data quality issues to spiff007@gmail.com. 
+                All data is the copyright of AACR , ©AACR . It is visualized here merely to be useful to the cancer researcher community, not an endorsement of any results or conclusions."
+                Visualization inspired by <a href="https://aacr.convoke.bio/" target="_blank">aacr.convoke.bio</a> - thanks to Alex Telford for the inspiration!</p>
         </header>
 
         <div class="controls">
