minor typos corrected

--- a/aacr2025.html
+++ b/aacr2025.html
@@ -305,7 +305,7 @@ i<!DOCTYPE html>
             </div>
             
             <p class="note">Note: these results are extracted from congress literature with large language models. Please report any data quality issues to spiff007@gmail.com. 
-                All data is the copyright of AACR , ©AACR . It is visualized here merely to be useful to the cancer researcher community, not an endorsement of any results or conclusions."
+                All data is the copyright of AACR , ©AACR . It is visualized here merely to be useful to the cancer researcher community, not an endorsement of any results or conclusions.
                 Visualization inspired by <a href="https://aacr.convoke.bio/" target="_blank">aacr.convoke.bio</a> - thanks to Alex Telford for the inspiration!</p>
         </header>
 
