link to Alex Telford, my writing inspiration

--- a/aacr2025.html
+++ b/aacr2025.html
@@ -305,8 +305,8 @@ i<!DOCTYPE html>
             </div>
             
             <p class="note">Note: these results are extracted from congress literature with large language models. Please report any data quality issues to spiff007@gmail.com. 
-                All data is the copyright of AACR , ©AACR . It is visualized here merely to be useful to the cancer researcher community, not an endorsement of any results or conclusions.
-                Visualization inspired by <a href="https://aacr.convoke.bio/" target="_blank">aacr.convoke.bio</a> - thanks to Alex Telford for the inspiration!</p>
+                All data is the copyright of AACR , ©AACR . It is visualized here merely to be useful to the cancer research community, not an endorsement of any results or conclusions.
+                Visualization inspired by <a href="https://aacr.convoke.bio/" target="_blank">aacr.convoke.bio</a> - Much thanks to <a href="https://atelfo.github.io" target="_blank">Alex Telford</a> for the inspiration for this dashboard & for his excellent musings on de-mystifying drug discovery !</p>
         </header>
 
         <div class="controls">
