--- a/aacr2025.html
+++ b/aacr2025.html
@@ -308,7 +308,7 @@
                 <p>This interactive dashboard visualizes objective response rates from clinical trials reported at AACR 2025, featuring real data extracted from 12 clinical trial abstracts including breakthrough studies like KEYNOTE-689 (pembrolizumab in head & neck cancer), KEYLYNK-007 (olaparib + pembrolizumab tumor-agnostic trial), Dostarlimab non-operative management (81% ORR), and Zoldonrasib (KRAS G12D inhibitor with 61% ORR). The dashboard allows filtering by cancer type, trial phase, and company, with interactive tooltips providing detailed trial information including sample sizes ranging from 12 to 714 patients and response rates from 27% to 85.7% across multiple cancer types.</p>
             </div>
             
-            <p class="note">Note: these results are extracted from congress literature with large language models. Please report any data quality issues to spiff007@gmail.com. 
+            <p class="note">Note: these results are extracted from congress literature with large language models. Please report any data quality issues to me, Ashish Makani, at, spiff007@{free email service from Google}. 
                 All data is the copyright of AACR , ©AACR . It is visualized here merely to be useful to the cancer research community, not an endorsement of any results or conclusions.
                 Visualization inspired by <a href="https://aacr.convoke.bio/" target="_blank">aacr.convoke.bio</a> - Much thanks to <a href="https://atelfo.github.io" target="_blank">Alex Telford</a> for the inspiration for this dashboard & for his excellent musings on de-mystifying drug discovery !</p>
         </header>
