--- a/aacr2025/index.html
+++ b/aacr2025/index.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 title: "AACR 2025 Clinical Trial Results Dashboard"
-description: "Interactive dashboard visualizing objective response rates from clinical trials reported at AACR 2025"
+description: "Interactive dashboard visualizing objective response rates from clinical trials reported at AACR 2025""
+published: false
 ---
         <header class="header">
             <h1>AACR 2025 Clinical Trial Results</h1>
