--- a/asco2025.html
+++ b/asco2025.html
@@ -468,11 +468,11 @@
                     <div class="stat-label">Cancer Tracks</div>
                 </div>
                 <div class="stat-card">
-                    <span class="stat-number">217</span>
+                    <span class="stat-number">165</span>
                     <div class="stat-label">Early Phase Trials (1 & 1/2)</div>
                 </div>
                 <div class="stat-card">
-                    <span class="stat-number">121</span>
+                    <span class="stat-number">86</span>
                     <div class="stat-label">Largest Track (Developmental Therapeutics)</div>
                 </div>
             </div>
@@ -483,64 +483,66 @@
                     <div class="track-column">
                         <div class="track-item">
                             <span class="track-name">Developmental Therapeutics</span>
-                            <span class="track-count">121 trials</span>
+                            <span class="track-count">86 trials</span>
+                        </div>
+                        <div class="track-item">
+                            <span class="track-name">Lung Cancer</span>
+                            <span class="track-count">51 trials</span>
                         </div>
                         <div class="track-item">
                             <span class="track-name">Breast Cancer</span>
                             <span class="track-count">49 trials</span>
                         </div>
-                        <div class="track-item">
-                            <span class="track-name">Hematologic Malignancies</span>
-                            <span class="track-count">47 trials</span>
-                        </div>
                     </div>
                     <div class="track-column">
                         <div class="track-item">
-                            <span class="track-name">Lung Cancer</span>
+                            <span class="track-name">Genitourinary Cancers</span>
                             <span class="track-count">41 trials</span>
                         </div>
                         <div class="track-item">
-                            <span class="track-name">Genitourinary Cancers</span>
+                            <span class="track-name">Gastrointestinal Cancers</span>
+                            <span class="track-count">40 trials</span>
+                        </div>
+                        <div class="track-item">
+                            <span class="track-name">Melanoma/Skin Cancers</span>
+                            <span class="track-count">39 trials</span>
+                        </div>
+                    </div>
+                    <div class="track-column">
+                        <div class="track-item">
+                            <span class="track-name">Hematologic Malignancies</span>
                             <span class="track-count">36 trials</span>
                         </div>
                         <div class="track-item">
+                            <span class="track-name">Gynecologic Cancers</span>
+                            <span class="track-count">15 trials</span>
+                        </div>
+                        <div class="track-item">
                             <span class="track-name">CNS/Brain Tumors</span>
-                            <span class="track-count">29 trials</span>
+                            <span class="track-count">12 trials</span>
                         </div>
                     </div>
                     <div class="track-column">
-                        <div class="track-item">
-                            <span class="track-name">Melanoma/Skin Cancers</span>
-                            <span class="track-count">29 trials</span>
-                        </div>
-                        <div class="track-item">
-                            <span class="track-name">Gastrointestinal Cancers</span>
-                            <span class="track-count">22 trials</span>
-                        </div>
                         <div class="track-item">
                             <span class="track-name">Sarcoma</span>
-                            <span class="track-count">5 trials</span>
+                            <span class="track-count">8 trials</span>
                         </div>
-                    </div>
-                    <div class="track-column">
                         <div class="track-item">
                             <span class="track-name">Head and Neck Cancer</span>
-                            <span class="track-count">3 trials</span>
+                            <span class="track-count">5 trials</span>
                         </div>
                         <div class="track-item">
                             <span class="track-name">Quality Care/Health Services Research</span>
-                            <span class="track-count">2 trials</span>
+                            <span class="track-count">3 trials</span>
                         </div>
-                        <div class="track-item">
-                            <span class="track-name">Gynecologic Cancers</span>
-                            <span class="track-count">1 trials</span>
-                        </div>
+                    </div>
+                </div>
                     </div>
                 </div>
             </div>
             
             <p style="margin-top: 20px; color: #666; line-height: 1.6;">
-                This comprehensive dataset represents the cutting edge of cancer research, spanning 385 ongoing clinical trials across 12 distinct cancer tracks. The studies showcase breakthrough approaches including CAR-T cell therapies, antibody-drug conjugates (ADCs), next-generation checkpoint inhibitors, and innovative precision medicine strategies. With enrollment targets ranging from small Phase 1 dose-escalation studies of 12 patients to large confirmatory trials of 1149 participants (average: 116 patients per study), these investigations collectively represent billions of dollars in research investment and the therapeutic pipeline for millions of cancer patients worldwide. The dominance of developmental therapeutics (121 studies), breast cancer (49 studies), and hematologic malignancies (47 studies) reflects both urgent unmet medical needs and significant recent advances in our molecular understanding of these diseases. The 217 early-phase trials (56% of all studies) demonstrate the experimental nature of this pipeline, featuring 167 distinct investigational agents from 38 companies worldwide.
+                This comprehensive dataset represents the cutting edge of cancer research, spanning 385 ongoing clinical trials across 12 distinct cancer tracks. The studies showcase breakthrough approaches including CAR-T cell therapies, antibody-drug conjugates (ADCs), next-generation checkpoint inhibitors, and innovative precision medicine strategies. With enrollment targets ranging from small Phase 1 dose-escalation studies of 12 patients to large confirmatory trials of 1149 participants (average: 116 patients per study), these investigations collectively represent billions of dollars in research investment and the therapeutic pipeline for millions of cancer patients worldwide. The dominance of developmental therapeutics (86 studies), lung cancer (51 studies), and breast cancer (49 studies) reflects both urgent unmet medical needs and significant recent advances in our molecular understanding of these diseases. The 165 early-phase trials (43% of all studies) demonstrate the experimental nature of this pipeline, featuring 167 distinct investigational agents from 38 companies worldwide.
             </p>
         </div>
 
