solid and dashed circles, highlighted & non highlighted; highlighted in cyan; last commit for a while :D

--- a/asco2025.html
+++ b/asco2025.html
@@ -455,12 +455,14 @@
         /* Enrollment Data Availability Styles */
         .eda { 
             background-color: #4ecdc4; 
-            opacity: 0.8; 
+            opacity: 0.9;
+            border: 2px solid #fff;
+            box-sizing: border-box;
         }
         .edna { 
             background-color: #4ecdc4; 
-            opacity: 0.5; 
-            border: 1px dashed #666; 
+            opacity: 0.6; 
+            border: 2px dashed #333; 
             box-sizing: border-box;
         }
 
@@ -1002,59 +1004,59 @@
 
         /* Enhanced data point styling for search results */
         .data-point.search-highlighted {
-            stroke: #3282b8;
-            stroke-width: 4px;
+            stroke: #00FFFF !important; /* Cyan highlight */
+            stroke-width: 3px !important;
             opacity: 1 !important;
             animation: searchPulse 2s infinite;
-            filter: drop-shadow(0 0 8px rgba(50, 130, 184, 0.6));
+            filter: drop-shadow(0 0 6px rgba(0, 255, 255, 0.8));
         }
 
         .data-point.search-dimmed {
-            opacity: 0.2;
+            opacity: 0.25;
             transition: opacity 0.5s ease;
         }
 
         /* TPS ID search highlighting */
         .data-point.tps-highlighted {
-            stroke: #e74c3c;
-            stroke-width: 5px;
+            stroke: #FF6B35 !important; /* Orange highlight */
+            stroke-width: 4px !important;
             opacity: 1 !important;
             animation: tpsPulse 2s infinite;
-            filter: drop-shadow(0 0 10px rgba(231, 76, 60, 0.8));
+            filter: drop-shadow(0 0 8px rgba(255, 107, 53, 0.9));
         }
 
         .data-point.tps-dimmed {
-            opacity: 0.15;
+            opacity: 0.2;
             transition: opacity 0.5s ease;
         }
 
         @keyframes tpsPulse {
             0% { 
-                stroke-width: 5px; 
-                filter: drop-shadow(0 0 10px rgba(231, 76, 60, 0.8));
+                stroke-width: 4px; 
+                filter: drop-shadow(0 0 8px rgba(255, 107, 53, 0.9));
             }
             50% { 
-                stroke-width: 7px; 
-                filter: drop-shadow(0 0 15px rgba(231, 76, 60, 1));
+                stroke-width: 5px; 
+                filter: drop-shadow(0 0 12px rgba(255, 107, 53, 1));
             }
             100% { 
-                stroke-width: 5px; 
-                filter: drop-shadow(0 0 10px rgba(231, 76, 60, 0.8));
+                stroke-width: 4px; 
+                filter: drop-shadow(0 0 8px rgba(255, 107, 53, 0.9));
             }
         }
 
         @keyframes searchPulse {
             0% { 
-                stroke-width: 4px; 
-                filter: drop-shadow(0 0 8px rgba(50, 130, 184, 0.6));
+                stroke-width: 3px; 
+                filter: drop-shadow(0 0 6px rgba(0, 255, 255, 0.8));
             }
             50% { 
-                stroke-width: 6px; 
-                filter: drop-shadow(0 0 12px rgba(50, 130, 184, 0.8));
+                stroke-width: 4px; 
+                filter: drop-shadow(0 0 10px rgba(0, 255, 255, 1));
             }
             100% { 
-                stroke-width: 4px; 
-                filter: drop-shadow(0 0 8px rgba(50, 130, 184, 0.6));
+                stroke-width: 3px; 
+                filter: drop-shadow(0 0 6px rgba(0, 255, 255, 0.8));
             }
         }
 
@@ -1728,10 +1730,10 @@ class ASCOTrialDashboard {
             .attr("cy", d => this.yScale(d.yPosition))
             .attr("r", 8)
             .attr("fill", d => this.getPhaseColor(d.trialPhase))
-            .attr("opacity", d => d.hasEnrollmentData ? 0.8 : 0.5)
-            .attr("stroke", d => d.hasEnrollmentData ? "none" : "#666")
-            .attr("stroke-width", d => d.hasEnrollmentData ? 0 : 1)
-            .attr("stroke-dasharray", d => d.hasEnrollmentData ? "none" : "3,3");
+            .attr("opacity", d => d.hasEnrollmentData ? 0.9 : 0.6)
+            .attr("stroke", d => d.hasEnrollmentData ? "#fff" : "#333")
+            .attr("stroke-width", d => d.hasEnrollmentData ? 2 : 2)
+            .attr("stroke-dasharray", d => d.hasEnrollmentData ? "none" : "4,2");
 
         // Enrollment legend is now handled by static HTML
 
