make solid and dashed dots in the legend, the same size

--- a/asco2025.html
+++ b/asco2025.html
@@ -456,14 +456,18 @@
         .eda { 
             background-color: #4ecdc4; 
             opacity: 0.9;
-            border: 2px solid #fff;
-            box-sizing: border-box;
+            outline: 1px solid rgba(255, 255, 255, 0.5);
+            outline-offset: -1px;
+            width: 12px !important;
+            height: 12px !important;
         }
         .edna { 
             background-color: #4ecdc4; 
             opacity: 0.6; 
-            border: 2px dashed #333; 
+            border: 1px dashed #333; 
             box-sizing: border-box;
+            width: 12px !important;
+            height: 12px !important;
         }
 
         .stats-section {
