Add acknowledgments section with inspirational reading list

--- a/abs_for_cancer_targets/index.html
+++ b/abs_for_cancer_targets/index.html
@@ -284,6 +284,20 @@
             <p><strong>Want more depth?</strong> For detailed methodology comparisons, additional oncology targets, and full citations, <a href="/files/v5_denovo_antibody_design_comparison.pdf" target="_blank">read the comprehensive technical report (PDF)</a>.</p>
         </div>
 
+        <h2>Acknowledgments</h2>
+        <p>This analysis wouldn't exist without several writers who got me fascinated by the science of antibody engineering in the first place. Monoclonal antibodies already make up a large fraction of cancer drugs&mdash;so it didn't take much convincing&mdash;but these four articles turned curiosity into obsession:</p>
+        
+        <div class="platform-card" style="border-color: var(--accent); margin-top: 1.5em;">
+            <h3 style="margin-bottom: 0.8em;">Essential Reading</h3>
+            <ul style="margin: 0;">
+                <li><a href="https://www.owlposting.com/p/a-primer-on-ai-in-antibody-engineering" target="_blank" style="color: var(--accent); font-weight: 600;">A Primer on AI in Antibody Engineering</a> &mdash; <em>Owlposting</em><br><span style="font-size: 0.9em; color: #666;">The foundation. Clear explanation of how ML is reshaping antibody discovery.</span></li>
+                <li style="margin-top: 0.8em;"><a href="https://www.owlposting.com/p/a-primer-to-the-next-generation-of-antibodies" target="_blank" style="color: var(--accent); font-weight: 600;">A Primer to the Next Generation of Antibodies</a> &mdash; <em>Owlposting</em><br><span style="font-size: 0.9em; color: #666;">Beyond mAbs: bispecifics, ADCs, and where the field is heading.</span></li>
+                <li style="margin-top: 0.8em;"><a href="https://www.owlposting.com/p/better-antibodies-by-engineering" target="_blank" style="color: var(--accent); font-weight: 600;">Better Antibodies by Engineering</a> &mdash; <em>Owlposting</em><br><span style="font-size: 0.9em; color: #666;">The nuts and bolts of making antibodies druggable.</span></li>
+                <li style="margin-top: 0.8em;"><a href="https://www.worksinprogress.news/p/the-antibody-factory" target="_blank" style="color: var(--accent); font-weight: 600;">The Antibody Factory</a> &mdash; <em>Alex Telford, Works in Progress</em><br><span style="font-size: 0.9em; color: #666;">The industrial scale of antibody manufacturing and what it means for drug access.</span></li>
+            </ul>
+        </div>
+        <p style="margin-top: 1.5em;">If you're new to this space, start there. Then come back and the platform comparisons above will make a lot more sense.</p>
+
         <div class="footer">
             <p>Data sources: JAM-2, Chai-2, Origin-1, RFAntibody, and Latent-X2 publications (2024&ndash;2026). Open Targets Platform for disease associations.</p>
             <p style="margin-top: 1em;"><a href="/" style="color: var(--accent);">&larr; Back to inventcures.github.io</a></p>
